--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "go-dynamic-ops",
   "displayName": "go-dynamic-ops",
+  "repository": {
+    "type": "git",
+    "url": "github.com/veloper/go-dynamic-ops.git"
+  },
   "description": "",
   "version": "0.0.1",
   "engines": {
@@ -12,10 +16,12 @@
   "activationEvents": [],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "go-dynamic-ops.helloWorld",
-      "title": "Hello World"
-    }]
+    "commands": [
+      {
+        "command": "extension.newStructMethod",
+        "title": "New Struct Method"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
